Preliminary GUI for device preferences

--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -20,6 +20,7 @@ SRCS=\
    DataSetLoaderUI.cxx\
    Frame.cpp \
    Network.cpp \
+   DevicePreferences.cpp \
    NavigationPane.cxx \
    paraThread.cpp \
    PluginLoader.cpp \
