--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -10,6 +10,7 @@ srcs = Split("""
    DataSetLoaderUI.cxx
    Frame.cpp 
    Network.cpp 
+   DevicePreferences.cpp 
    NavigationPane.cxx 
    paraThread.cpp 
    PluginLoader.cpp 
