--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -284,7 +284,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\DevicePreferences.cpp"
+				RelativePath=".\DeviceProperties.cpp"
 				>
 			</File>
 			<File
@@ -464,7 +464,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\DevicePreferences.h"
+				RelativePath=".\DeviceProperties.h"
 				>
 			</File>
 			<File
