--- a/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv ves_pkg LIBDIR GetPlatform vtk_options buildDir wxwidgets_options')
+Import('baseEnv ves_pkg LIBDIR GetPlatform vtk_options buildDir wxwidgets_options PREFIX')
 
 srcs = Split("""
    flowTexture.cpp 
@@ -21,3 +21,17 @@ vtk_options.apply( env )
 prog = ves_pkg.createProgram('vtkTo3DTexture', env, 'bin')
 prog.addSources( srcs )
 prog.build()
+
+if GetPlatform() == "darwin":
+   idlCmd = '/Developer/Tools/Rez -d __DARWIN__ -t APPL Carbon.r -o ${SOURCE}'
+   bld = Builder(action = idlCmd )
+   env.Append(BUILDERS = {'apple_rez': bld})
+   if 'install' in COMMAND_LINE_TARGETS:
+      conductorTarget = pj(PREFIX,'bin','Texture')
+      winTarget = pj(PREFIX,'bin','vtkTo3DTexture')
+   else:
+      conductorTarget = pj( '#', buildDir,'VE_Builder','vtkTo3DTexture','tcGUI','Texture')
+      winTarget = pj( '#',buildDir,'VE_Builder','vtkTo3DTexture','tcGUI','vtkTo3DTexture')
+
+   env.apple_rez( conductorTarget, winTarget)
+   env.AddPostAction( conductorTarget,Copy('$TARGET','$SOURCE'))
