Forgot to update build files for last commit

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -117,6 +117,7 @@ SRCS=\
    MaterialUpdateEH.cxx\
    KeyboardMouse.cxx\
    Trackball.cxx\
+   TrackballEventHandler.cpp\
    cfdObjectHandler.cxx\
    SelectionHandler.cxx\
    MouseSelection.cxx\
