Added class to handle device mode changes

--- a/VE_Xplorer/XplorerHandlers/Makefile
+++ b/VE_Xplorer/XplorerHandlers/Makefile
@@ -113,6 +113,7 @@ SRCS=\
    CADToggleEH.cxx \
    CADTransformEH.cxx \
    DeviceHandler.cpp \
+   DeviceEventHandler.cpp \
    MaterialModeUpdateEH.cxx \
    MaterialUpdateEH.cxx\
    KeyboardMouse.cxx\
