--- a/VE_Xplorer/XplorerHandlers/SConscript
+++ b/VE_Xplorer/XplorerHandlers/SConscript
@@ -64,6 +64,7 @@ sources = Split("""
    CADToggleEH.cxx
    CADTransformEH.cxx
    DeviceHandler.cpp
+   DeviceEventHandler.cpp
    MaterialModeUpdateEH.cxx
    MaterialUpdateEH.cxx
    KeyboardMouse.cxx
@@ -159,6 +160,7 @@ headers = Split("""
    CADToggleEH.h
    CADTransformEH.h
    DeviceHandler.h
+   DeviceEventHandler.h
    MaterialModeUpdateEH.h
    MaterialUpdateEH.h
    KeyboardMouse.h
