--- a/VE_Open/idl/SConscript
+++ b/VE_Open/idl/SConscript
@@ -8,8 +8,10 @@ env = baseEnv.Copy()
 ##env.Append(CPPPATH = [os.getcwd()])
 ##env.Append(CPPPATH = ['idl'])
 
-target = [pj('#','VE_Open','skel','moduleS.h'), 
-          pj('#','VE_Open','skel','VjObsS.h')]
+targetModule = [pj('#','VE_Open','skel','moduleS.h'), 
+          pj('#','VE_Open','skel','moduleC.h')]
+targetVjObs = [pj('#','VE_Open','skel','VjObsS.h'), 
+               pj('#','VE_Open','skel','VjObsC.h')]
 
 ##taoPrefix = "/Volumes/data/VE_Suite_Deps/ACE_TAO/install/bin/"
 ##Popen(['flagpoll', 'TAO', '--variable=prefix'], stdout=PIPE).communicate[0] + "/bin/tao_idl"
@@ -17,8 +19,7 @@ target = [pj('#','VE_Open','skel','moduleS.h'),
 idlCmd = 'tao_idl -o ./VE_Open/skel -in -GI -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ${SOURCES}'
 srcs = [pj('#',buildDir,'VE_Open','idl','module.idl'), 
         pj('#',buildDir,'VE_Open','idl','VjObs.idl')]
-##idlFile = [idlCmd + srcs[0], idlCmd + srcs[1]]
 bld = Builder(action = idlCmd)
 env.Append(BUILDERS = {'tao_idl': bld})
-for i in range(len(srcs)):
-    env.tao_idl(target[i], srcs[i])
+env.tao_idl(targetModule, pj('#',buildDir,'VE_Open','idl','module.idl'))
+env.tao_idl(targetVjObs, pj('#',buildDir,'VE_Open','idl','VjObs.idl'))
