--- a/VE_Open/idl/SConscript
+++ b/VE_Open/idl/SConscript
@@ -13,10 +13,11 @@ targetModule = [pj('#','VE_Open','skel','moduleS.h'),
 targetVjObs = [pj('#','VE_Open','skel','VjObsS.h'), 
                pj('#','VE_Open','skel','VjObsC.h')]
 
-##taoPrefix = "/Volumes/data/VE_Suite_Deps/ACE_TAO/install/bin/"
-##Popen(['flagpoll', 'TAO', '--variable=prefix'], stdout=PIPE).communicate[0] + "/bin/tao_idl"
-##idlCmd = taoPrefix + 'tao_idl -o ./VE_Open/skel -GI -I./VE_Open/idl ./VE_Open/idl/'
-idlCmd = 'tao_idl -o ./VE_Open/skel -in -GI -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ${SOURCES}'
+taoPrefix=os.popen('flagpoll TAO --variable=prefix').read().strip()
+env.PrependENVPath( 'LD_LIBRARY_PATH',pj( taoPrefix,'lib'))
+env.PrependENVPath( 'PATH',pj( taoPrefix,'bin'))
+tao_idl ='tao_idl'
+idlCmd = tao_idl + ' -o ./VE_Open/skel -in -GI  -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ${SOURCES}'
 srcs = [pj('#',buildDir,'VE_Open','idl','module.idl'), 
         pj('#',buildDir,'VE_Open','idl','VjObs.idl')]
 bld = Builder(action = idlCmd)
