adapting volumevishandlers to maintain more than one shader. The core functionality is the same but now instead of only allowing one shader (which we create internally) a user can add their own. This isn't the final solution AND the vector stuff wasn't touch but we needed this for the smoke stuff...on a side note, TBVis needs major refactoring.

--- a/VE_Xplorer/TextureBased/VE_TextureBased.vcproj
+++ b/VE_Xplorer/TextureBased/VE_TextureBased.vcproj
@@ -624,6 +624,10 @@
 					RelativePath=".\cfdVolumeVisualization.cxx"
 					>
 				</File>
+				<File
+					RelativePath=".\TBVolumeSlices.cxx"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="headers"
@@ -650,6 +654,10 @@
 				</File>
 				<File
 					RelativePath=".\cfdVolumeVisualization.h"
+					>
+				</File>
+				<File
+					RelativePath=".\TBVolumeSlices.h"
 					>
 				</File>
 			</Filter>
