updated build to fix a few problems and added version checking on flagpoll deps so that build is correct.

--- a/VE_Xplorer/GE/SConscript
+++ b/VE_Xplorer/GE/SConscript
@@ -46,7 +46,7 @@ env.ParseConfig('flagpoll vrjuggler vpr TAO \
                           --libs --cflags')
 env.ParseConfig('flagpoll vrjuggler --get-vrj-ogl-libs')
 
-if baseEnv[ 'cluster' ] != "no":
+if baseEnv['cluster'] != 'no':
    execOsgPatTag += "_cluster"
    env.Append( CPPDEFINES = ['_CLUSTER' ])
    
