--- a/VE_Installer/Makefile
+++ b/VE_Installer/Makefile
@@ -57,6 +57,7 @@ ${VE_SUITE_HOME}/VE_Open \
 ${VE_SUITE_HOME}/VE_Conductor/Network \
 ${VE_SUITE_HOME}/VE_CE/Utilities \
 ${VE_SUITE_HOME}/VE_CE \
+${VE_SUITE_HOME}/VE_CE/UnitWrapper \
 ${VE_SUITE_HOME}/VE_Conductor \
 ${VE_SUITE_HOME}/VE_Xplorer \
 ${VE_SUITE_HOME}/VE_Builder/Translator/cfdTranslatorToVTK \
