--- a/VE_Xplorer/DefaultGraphicalPlugin/SConscript
+++ b/VE_Xplorer/DefaultGraphicalPlugin/SConscript
@@ -2,7 +2,7 @@
 import os, sys, string
 pj = os.path.join
 
-Import('baseEnv ves_pkg LIBDIR execOsgPatTag buildDir vtk_options osg_options xerces_options')
+Import('baseEnv ves_pkg LIBDIR execOsgPatTag buildDir vtk_options osg_options xerces_options GetPlatform')
 
 sources = Split("""
     DefaultGraphicalPlugin.cxx
@@ -33,7 +33,10 @@ vtk_options.apply( lib_env )
 osg_options.apply( lib_env )
 xerces_options.apply( lib_env )
 
-##if baseEnv['StaticOnly'] == "no":
+if GetPlatform() == 'darwin':
+   lib_env['SHLINKFLAGS'] = '$LINKFLAGS -bundle -flat_namespace -undefined suppress'
+   lib_env['SHLIBSUFFIX'] = '.dylib'
+
 lib = ves_pkg.createSharedLibrary('DefaultGraphicalPlugin%s' %(execOsgPatTag),
                                                         lib_env,
                                                         installPrefix = pj('bin','Plugins','GE'))
