--- a/share/docs/Makefile
+++ b/share/docs/Makefile
@@ -6,6 +6,7 @@ XML_FILES=\
  vesuite.xml
 
 XSLT_TOOL?=Saxon 
+#XSLT_TOOL?=Xalan
 #FO_VERSION=XEP
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/docbook.mk
