--- a/VE_Installer/installer/SConscript
+++ b/VE_Installer/installer/SConscript
@@ -7,5 +7,8 @@ Import('ves_pkg')
 
 launcherBundle = ves_pkg.createFileBundle( 'bin' )
 pyFile = sca_util.getFilesRecursiveByExt( '.', ['.py'] )
+pyFile += sca_util.getFilesRecursiveByExt( '.', ['.xpm'] )
+pyFile += sca_util.getFilesRecursiveByExt( '.', ['.bmp'] )
+pyFile += sca_util.getFilesRecursiveByExt( '.', ['.png'] )
 launcherBundle.addFiles( pyFile )
    
