updated class for drawing network

--- a/VE_Xplorer/XplorerNetwork/Makefile
+++ b/VE_Xplorer/XplorerNetwork/Makefile
@@ -59,7 +59,9 @@ SRCS=\
    cfdVEPluginLoader.cxx\
    VE_i.cpp\
    DeleteObjectFromNetworkEventHandler.cxx\
-   SwitchXplorerViewEventHandler.cxx
+   SwitchXplorerViewEventHandler.cxx\
+   NetworkSystemView.cxx
+
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 EXTRA_LDFLAGS+= -g
