--- a/VE_Conductor/Utilities/SConscript
+++ b/VE_Conductor/Utilities/SConscript
@@ -64,7 +64,7 @@ lib_env.Append(LIBPATH = [pj('#', buildDir, 'VE_Conductor','Network'),
                         pj('#', buildDir, 'VE_Open','XML','Model'),
                         pj('#', buildDir, 'VE_Open','XML','CAD'),
                         pj('#', buildDir, 'VE_Open','XML','Shader')])
-lib_env.ParseConfig('flagpoll TAO --cflags --libs')
+lib_env.ParseConfig('flagpoll TAO TAO_Messaging TAO_Valuetype  --cflags --libs')
 xerces_options.apply( lib_env )
 wxwidgets_options.apply( lib_env )
 if baseEnv['StaticOnly'] == "no":
