--- a/VE_Open/idl/SConscript
+++ b/VE_Open/idl/SConscript
@@ -17,7 +17,7 @@ taoPrefix=os.popen('flagpoll TAO --variable=prefix').read().strip()
 env.PrependENVPath( 'LD_LIBRARY_PATH',pj( taoPrefix,'lib'))
 env.PrependENVPath( 'PATH',pj( taoPrefix,'bin'))
 tao_idl ='tao_idl'
-idlCmd = tao_idl + ' -o ./VE_Open/skel -in -GI  -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ${SOURCES}'
+idlCmd = tao_idl + ' -o ./VE_Open/skel -in -GC -GI  -I./VE_Open/idl -Wb,export_macro=VE_OPEN_MODULE_EXPORTS -Wb,export_include=VE_Installer/include/VEConfig.h ${SOURCES}'
 srcs = [pj('#',buildDir,'VE_Open','idl','module.idl'), 
         pj('#',buildDir,'VE_Open','idl','VjObs.idl')]
 bld = Builder(action = idlCmd)
