--- a/VE_Conductor/Framework/SConscript
+++ b/VE_Conductor/Framework/SConscript
@@ -48,7 +48,8 @@ env.Append(LIBPATH = [pj('#', buildDir, 'VE_Conductor','Network'),
 
 env.ParseConfig('flagpoll TAO ACE TAO_IORInterceptor TAO_ObjRefTemplate TAO_Valuetype \
                               TAO_CosNaming TAO_Svc_Utils TAO_IORTable TAO_Messaging \
-                              TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode TAO_Messaging --cflags --libs')
+                              TAO_PortableServer TAO_BiDirGIOP TAO_AnyTypeCode \
+                              TAO_Messaging TAO_Valuetype --cflags --libs')
 xerces_options.apply( env )
 wxwidgets_options.apply( env )
 prog = ves_pkg.createProgram('WinClient', env, 'bin')
